# GUI_Video_Compressor

./: .gitignore  GPUinfo.py  README.md  app.py  ctk_progressbar_popup.py  ffmpeg_processor.py  ffprobe_processor.py  pyproject.toml  requirements.txt  thirdpartylicenses.txt  video_widget.py
assets/images/video_control_icons/: camera_white.ase
src/: app.py  main.py  resource_paths.py  utils.py
src/assets/: about.txt
src/assets/licenses/: thirdpartylicenses.txt
src/components/: CTkRangeSlider.py  ctk_scroll_msgbox.py  frame_viewer.py  progressbar_popup.py  video_trimmer.py  video_widget.py
src/modules/: GPUinfo.py  gpu_utils.py  resolution_utils.py
src/processors/: ffmpeg_processor.py  ffprobe_processor.py
src/utils/: gpu_utils.py  log_utils.py  path_utils.py  resolution_utils.py  timestamp_untils.py
